# bitchai_testing

./: .gitignore  chat_engine.py  combine_json.py  combined.json  combined.txt  data_processing.py  notes.txt  pyproject.toml  query_converter.py  query_expansion.json  sample_query.json  starter.py
data/: combine_json.py  combined.json  data_processing.py
data/jsons/: 12145546.json  14.7.3.3 20210728 Singapore CBRE Project - Final Report - DISCUSSION DRAFT.json  2018 GCCA Cold Storage Capacity Report final.json  2020-GCCA-Global-Cold-Storage-Capacity-Report-FINAL-v2.json  20240226 TPG Presentation to SuperFreeze.json  2209 CUSHMAN - cold storage opportunities (1).json  2311 JLL cold-storage-opp-in-APAC (1).json  ACS Investor Presentation SuperFreeze 01 July 2023.json  CBRE Major Report_2023 Asia Pacific Real Estate Market Outlook_FINAL.json  Cold_Chain_Top_Markets_Report.json  Colliers Korea Radar 2022 Logistics Market_En_20220901.json  DDSP_05_Cold Storage and Warehouse Survey_ Rev.01.json  Indonesian Cold Chain Overview 051022 Pages 1-15 - Flip PDF Download _ FlipHTML5.json  Quarterly Market Report 2024Q1.json  Vietnam-Development-Report-2019-Connecting-Vietnam-for-Growth-and-Shared-Prosperity.json  ap-cold-storage-spotlight-06-2023.json  jll-cold-storage-paper-2022 (1).json  mappletree2.json  (+6 more)
nomic/: chat_infra.py  log.py  search.py  test.py  test2.py
texts/: Vietnam-Development-Report-2019-Connecting-Vietnam-for-Growth-and-Shared-Prosperity.txt  indonesiacold.txt  indonesiacoldchain.txt  savills.txt  savillsvnreport.txt  vnfruitexporter.txt  vninvestmentreview.txt
(+3 files in other folders)
