[tool.poetry]
name = "bitchai-testing"
version = "0.1.0"
description = ""
authors = ["Ata <ataonat00@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
llama-index = "^0.10.36"
pymupdf = "^1.24.4"
python-docx = "^1.1.2"
nomic = "^3.0.28"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
